fix: home page alignment

--- a/public/static/stylesheets/home.css
+++ b/public/static/stylesheets/home.css
@@ -1,6 +1,6 @@
 body {
     background-image: url('/static/_DSC6329.jpg');
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     position: relative; /* Ensure the pseudo-element is positioned relative to the body */
     z-index: 0; /* Default stacking context for the background */
